# pybiorythm-django-dashboard-example

./: Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: ci.yml
biorhythm_dashboard/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/: plotly_utils.py  services.py  test_correlation.py  test_view.py  urls.py  views.py
dashboard/management/commands/: test_api.py
templates/: base.html
templates/dashboard/: calculation_error.html  calculation_success.html  home.html  person_dashboard.html  test_chart.html  test_correlation.html
templates/dashboard/partials/: people_list.html  person_info.html
