[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybiorythm-django-dashboard-example"
version = "1.0.0"
description = "Django dashboard with HTMX and Plotly visualizations consuming PyBiorythm REST API"
authors = [
    {name = "dkdndes", email = "info@pybiorythm.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django :: 5.2",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "django>=5.2.5",
    "django-htmx>=1.17.0",
    "requests>=2.31.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "django-extensions",
    "ruff>=0.1.0",
    "bandit[toml]>=1.7.10",
    "safety>=3.0.0",
    "pytest-django",
    "coverage>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/dkdndes/pybiorythm-django-dashboard-example"
Documentation = "https://github.com/dkdndes/pybiorythm-django-dashboard-example/blob/main/README.md"
Repository = "https://github.com/dkdndes/pybiorythm-django-dashboard-example"
Issues = "https://github.com/dkdndes/pybiorythm-django-dashboard-example/issues"

[tool.django]
settings_module = "biorhythm_dashboard.settings"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "*/tests/*",
    "manage.py",
    "*/settings/*",
    "*/wsgi.py",
    "*/asgi.py",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "biorhythm_dashboard.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]